# guildmark-website

./: .env.example  .env.temp  .gitignore  CLAUDE.md  ROADMAP.md  TEAM.md  assets_seed.csv  dataannotation-watcher.user.js  docker-compose.appwrite.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  doppler.yaml  listings_import.csv  listings_seed.csv  package-lock.json  start.cmd  start.sh
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/wiki/: REGISTER.md
.github/workflows/: build-push.yml
api/: .gitignore  CLAUDE.md  README.md  docker-compose.yml  start.sh
api/migrations/: 0001_init.sql  0003_orders.sql  (+15 more)
devdash/: CLAUDE.md  Dockerfile  index.html  package.json  pnpm-lock.yaml
guildmark/: .dockerignore  CLAUDE.md  Dockerfile  README.md  index.html  nginx-spa.conf  package-lock.json  package.json  pnpm-lock.yaml
ml-qv/: CLAUDE.md  Dockerfile  README.md  __init__.py  entrypoint.sh  main.py  pyproject.toml  requirements.txt  schemas.py  setup.py
ml-qv/.github/workflows/: ci.yml  deploy.yml
ml-qv/eval_output/: report.html
ml-qv/models/: depreciation.joblib  depreciation.py  valuation.joblib  valuation.py
ml-qv/tests/: test_valuation.py
ml-qv/training/: data_retrieval.py  evaluate.py  retail_data.py  synthetic_data.py  train_depreciation.py  train_valuation.py
nginx/: Dockerfile  nginx.conf
partners/: .dockerignore  Dockerfile  index.html  nginx-spa.conf  package.json  pnpm-lock.yaml
scripts/: deploy.cmd  deploy.sh
(+118 files in other folders)
