[project]
name            = "guildmark-ml"
version         = "0.1.0"
description     = "GuildMark ML inference service — fair market value + depreciation forecasting."
requires-python = ">=3.11"

[tool.ruff]
line-length    = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RET"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths   = ["tests"]
addopts     = "-q"
